--- a/index.html
+++ b/index.html
@@ -21,24 +21,15 @@
             <h1>Compras da semana</h1>
 
             <div class="add-task-container grid gap-16">
-                <input type="text" placeholder="Adicione um novo item">
-                <button>Adicionar item</button>
+                <input type="text" id="inputTask" placeholder="Adicione um novo item">
+                <button id="buttonAddTask">Adicionar item</button>
             </div>
 
             <ul class="tasks-container grid gap-12">
-                <li class="task flex items-center gap-12">
-                    <div class="checkbox-wrapper">
-                        <div class="icon-checkbox"></div>
-                        <input type="checkbox" name="" id="">
-                    </div>
-                    <span>Pão de forma</span>
-                    <button type="button">
-                        <img src="./assets/trash.svg" alt="">
-                    </button>
-                </li>
+                
             </ul>
 
-            <div class="modal-delete flex items-center">
+            <div class="modal-delete hide-modal flex items-center">
                 <img src="./assets/warning-circle-filled.svg" alt="">
                 <span>O item foi removido da lista</span>
                 <button>
@@ -49,5 +40,6 @@
     </div>
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
